--- a/src/main/resources/assets/jani_2048_tiles/lang/en_us.json
+++ b/src/main/resources/assets/jani_2048_tiles/lang/en_us.json
@@ -21,18 +21,18 @@
     "block.jani_2048_tiles.jani_131k_block": "Jani 131k",
     "block.jani_2048_tiles.jani_262k_block": "Jani 262k",
     "block.jani_2048_tiles.jani_524k_block": "Jani 524k",
-    "block.jani_2048_tiles.jani_1m_block": "Jani 1m",
-    "block.jani_2048_tiles.jani_2m_block": "Jani 2m",
-    "block.jani_2048_tiles.jani_4m_block": "Jani 4m",
-    "block.jani_2048_tiles.jani_8m_block": "Jani 8m",
-    "block.jani_2048_tiles.jani_16m_block": "Jani 16m",
-    "block.jani_2048_tiles.jani_32m_block": "Jani 32m",
-    "block.jani_2048_tiles.jani_64m_block": "Jani 64m",
-    "block.jani_2048_tiles.jani_128m_block": "Jani 128m",
-    "block.jani_2048_tiles.jani_256m_block": "Jani 256m",
-    "block.jani_2048_tiles.jani_512m_block": "Jani 512m",
-    "block.jani_2048_tiles.jani_1b_block": "Jani 1b",
-    "block.jani_2048_tiles.jani_2b_block": "Jani 2b",
+    "block.jani_2048_tiles.jani_1m_block": "Jani 1M",
+    "block.jani_2048_tiles.jani_2m_block": "Jani 2M",
+    "block.jani_2048_tiles.jani_4m_block": "Jani 4M",
+    "block.jani_2048_tiles.jani_8m_block": "Jani 8M",
+    "block.jani_2048_tiles.jani_16m_block": "Jani 16M",
+    "block.jani_2048_tiles.jani_32m_block": "Jani 32M",
+    "block.jani_2048_tiles.jani_64m_block": "Jani 64M",
+    "block.jani_2048_tiles.jani_128m_block": "Jani 128M",
+    "block.jani_2048_tiles.jani_256m_block": "Jani 256M",
+    "block.jani_2048_tiles.jani_512m_block": "Jani 512M",
+    "block.jani_2048_tiles.jani_1b_block": "Jani 1B",
+    "block.jani_2048_tiles.jani_2b_block": "Jani 2B",
     "block.jani_2048_tiles.jani_4B_block": "Jani 4B",
     "block.jani_2048_tiles.jani_8B_block": "Jani 8B",
     "block.jani_2048_tiles.jani_16B_block": "Jani 16B",
