Fix lowercase names

--- a/src/main/resources/assets/jani_2048_tiles/lang/en_us.json
+++ b/src/main/resources/assets/jani_2048_tiles/lang/en_us.json
@@ -21,18 +21,18 @@
     "block.jani_2048_tiles.jani_131k_block": "Jani 131k",
     "block.jani_2048_tiles.jani_262k_block": "Jani 262k",
     "block.jani_2048_tiles.jani_524k_block": "Jani 524k",
-    "block.jani_2048_tiles.jani_1m_block": "Jani 1M",
-    "block.jani_2048_tiles.jani_2m_block": "Jani 2M",
-    "block.jani_2048_tiles.jani_4m_block": "Jani 4M",
-    "block.jani_2048_tiles.jani_8m_block": "Jani 8M",
-    "block.jani_2048_tiles.jani_16m_block": "Jani 16M",
-    "block.jani_2048_tiles.jani_32m_block": "Jani 32M",
-    "block.jani_2048_tiles.jani_64m_block": "Jani 64M",
-    "block.jani_2048_tiles.jani_128m_block": "Jani 128M",
-    "block.jani_2048_tiles.jani_256m_block": "Jani 256M",
-    "block.jani_2048_tiles.jani_512m_block": "Jani 512M",
-    "block.jani_2048_tiles.jani_1b_block": "Jani 1B",
-    "block.jani_2048_tiles.jani_2b_block": "Jani 2B",
+    "block.jani_2048_tiles.jani_1m_block": "Jani 1m",
+    "block.jani_2048_tiles.jani_2m_block": "Jani 2m",
+    "block.jani_2048_tiles.jani_4m_block": "Jani 4m",
+    "block.jani_2048_tiles.jani_8m_block": "Jani 8m",
+    "block.jani_2048_tiles.jani_16m_block": "Jani 16m",
+    "block.jani_2048_tiles.jani_32m_block": "Jani 32m",
+    "block.jani_2048_tiles.jani_64m_block": "Jani 64m",
+    "block.jani_2048_tiles.jani_128m_block": "Jani 128m",
+    "block.jani_2048_tiles.jani_256m_block": "Jani 256m",
+    "block.jani_2048_tiles.jani_512m_block": "Jani 512m",
+    "block.jani_2048_tiles.jani_1b_block": "Jani 1b",
+    "block.jani_2048_tiles.jani_2b_block": "Jani 2b",
     "block.jani_2048_tiles.jani_4B_block": "Jani 4B",
     "block.jani_2048_tiles.jani_8B_block": "Jani 8B",
     "block.jani_2048_tiles.jani_16B_block": "Jani 16B",
@@ -54,5 +54,27 @@
     "block.jani_2048_tiles.jani_1QD_block": "Jani 1QD",
     "block.jani_2048_tiles.jani_2QD_block": "Jani 2QD",
     "block.jani_2048_tiles.jani_4QD_block": "Jani 4QD",
-    "block.jani_2048_tiles.jani_8QD_block": "Jani 8QD"
+    "block.jani_2048_tiles.jani_8QD_block": "Jani 8QD",
+    "block.jani_2048_tiles.jani_4b_block": "Jani 4B",
+    "block.jani_2048_tiles.jani_8b_block": "Jani 8B",
+    "block.jani_2048_tiles.jani_16b_block": "Jani 16B",
+    "block.jani_2048_tiles.jani_32b_block": "Jani 32B",
+    "block.jani_2048_tiles.jani_64b_block": "Jani 64B",
+    "block.jani_2048_tiles.jani_128b_block": "Jani 128B",
+    "block.jani_2048_tiles.jani_256b_block": "Jani 256B",
+    "block.jani_2048_tiles.jani_512b_block": "Jani 512B",
+    "block.jani_2048_tiles.jani_1t_block": "Jani 1T",
+    "block.jani_2048_tiles.jani_2t_block": "Jani 2T",
+    "block.jani_2048_tiles.jani_4t_block": "Jani 4T",
+    "block.jani_2048_tiles.jani_8t_block": "Jani 8T",
+    "block.jani_2048_tiles.jani_16t_block": "Jani 16T",
+    "block.jani_2048_tiles.jani_32t_block": "Jani 32T",
+    "block.jani_2048_tiles.jani_64t_block": "Jani 64T",
+    "block.jani_2048_tiles.jani_128t_block": "Jani 128T",
+    "block.jani_2048_tiles.jani_256t_block": "Jani 256T",
+    "block.jani_2048_tiles.jani_512t_block": "Jani 512T",
+    "block.jani_2048_tiles.jani_1qd_block": "Jani 1QD",
+    "block.jani_2048_tiles.jani_2qd_block": "Jani 2QD",
+    "block.jani_2048_tiles.jani_4qd_block": "Jani 4QD",
+    "block.jani_2048_tiles.jani_8qd_block": "Jani 8QD"
 }
